# meowjelly

./: .gitignore  .justfile  Cargo.toml  README.md  flake.nix  index.html
android/: Cargo.toml
android/src/: lib.rs
assets/: config.toml  particles.toml  render.toml
assets/obstacles/: _list.ron  grass.toml  shovel.toml
assets/shaders/: particles.glsl  texture.glsl
assets/walls/: _list.ron
geng-thick-sprite/: Cargo.toml
geng-thick-sprite/examples/: demo.rs  shader.glsl
geng-thick-sprite/src/: lib.rs
src/: assets.rs  config.rs  controls.rs  ctx.rs  detectmobilebrowser.js  easings.rs  fancy_number.rs  game_state.rs  lib.rs  loading.rs  main.rs  particles.rs  render.rs
web/: index.html  meowjelly.d.ts  meowjelly.js  meowjelly.wasm  meowjelly_bg.wasm.d.ts
web/assets/: config.toml  controls.toml  particles.toml
web/assets/obstacles/: 2holes.toml  _list.ron
web/assets/shaders/: color_overlay.glsl  particles.glsl  texture.glsl
web/assets/walls/: _list.ron
ysdk/: Cargo.toml
ysdk/examples/: yatest.rs
ysdk/src/: lib.js  lib.rs
