[workspace]
members = ["android", "geng-thick-sprite"]

[workspace.dependencies]
batbox-android = { git = "https://github.com/geng-engine/batbox" }
geng = { git = "https://github.com/geng-engine/geng" }

[package]
name = "meowjelly"
version = "1.0.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
serde = "1"
geng.workspace = true
geng-thick-sprite = { path = "geng-thick-sprite" }

[patch.crates-io]
batbox-android = { git = "https://github.com/geng-engine/batbox" }
# https://github.com/smol-rs/async-broadcast/pull/47
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" }
