[workspace]
members = ["android", "ysdk"]

[workspace.dependencies]
batbox-logger = "0.16"
batbox-android = { git = "https://github.com/geng-engine/batbox" }
geng = { git = "https://github.com/geng-engine/geng" }

[package]
name = "meowjelly"
version = "1.0.0"
edition = "2021"

[features]
default = []
yandex = ["dep:ysdk"]

[profile.dev.package."*"]
opt-level = 2

[dependencies]
serde = "1"
geng.workspace = true
geng-sprite-shape = { git = "https://github.com/kuviman/sprite-shape" }
ysdk = { path = "ysdk", optional = true }

[patch.crates-io]
batbox-android = { git = "https://github.com/geng-engine/batbox" }
# https://github.com/smol-rs/async-broadcast/pull/47
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" }
