[package]
name = "ysdk"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
log = "0.4"
async-oneshot = "0.5"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCollection",
    "HtmlScriptElement",
    "Event",
] }
js-sys = "0.3"

[dev-dependencies]
batbox-logger.workspace = true
